--- a/frontend/src/components/SideBar/SideBar.css
+++ b/frontend/src/components/SideBar/SideBar.css
@@ -1,5 +1,5 @@
-*{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+* {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .sidebar {
@@ -9,12 +9,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: absolute;
+  position: fixed;
   top: 56px;
-  bottom: 0;
   left: 0;
+  bottom: 0;
+  height: 100vh; /* Ensure it takes full height */
   transition: transform 0.3s ease;
-
 }
 
 .sidebar.open {
@@ -30,15 +30,13 @@
   width: 62px;
   height: 62px;
   border-radius: 50%;
- margin: 5px;
-  
+  margin: 5px;
 }
 
 .user-name {
   margin-top: 8px;
   font-size: 18px;
   font-weight: bold;
-
 }
 
 .nav-links {
@@ -80,7 +78,6 @@
   color: white;
 }
 
-
 .sidebar-bottom {
   border-top: 3px solid #e5e7eb;
   padding: 10px 20px;
@@ -89,14 +86,13 @@
   justify-content: space-between;
   gap: 7px;
   cursor: pointer;
-  
+  margin-bottom: 60px;
 }
 
 .profile-info {
   display: flex;
   align-items: center;
   gap: 8px;
- 
 }
 
 .profile-avatar {
@@ -110,7 +106,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
 }
 
 .user-name-sm {
@@ -119,7 +114,6 @@
   color: #111827;
   line-height: 1.2;
   font-family: monospace;
- 
 }
 
 .plan {
@@ -134,7 +128,6 @@
   transition: transform 0.2s ease;
   padding-left: 3px;
   padding-top: 9px;
-
 }
 
 .sidebar-bottom:hover .logout-icon {
